see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Sep-2011 Christophe Demko
 # [#26706] No translation when adding extra quick icons (Rune Sjøen)

02-Sep-2011 Christophe Demko
 # [#26690] Test for native ZIP in system information + some minor stuff (Rouven Weßling, Jean-Marie Simonet)

28-Aug-2011 Jean-Marie Simonet
 # [#26696] *Register to read more redirects to login page, not registration. Thanks Elin.
 # [#26026] Detect a BOM in configuration.php. Thanks René.
 # [#26657] *Sample data button can be clicked twice. Thanks Rouven.
 # [#26512] Moving an existing single menuitem to another menu. using the drop down in 1.7.0 Thanks Elin.
 # [#26496] Inconsistency in Admin Template options - Show Site Name. Thanks Bill.
 # Correcting 2 unwanted Returns in 2 language files.
 
24-Aug-2011 Jean-Marie Simonet
 #$ Added Scottish Gaelic gd-GB in installation language
 $ Correcting some strings order in en-GB.lib_joomla.ini
 $ Added 2 JLIB error strings in en-GB, en-AU, en-US ini files
 # Updated Credits
 
23-Aug-2011 Mark Dexter
 # [#26631] Sync more changes from platform 11.2
 # Revert [#26631] (use branch merge instead)

23-Aug-2011 Jean-Marie Simonet
 # [#26683] Language switcher module wrong link with menu associations when no SEF. Thanks Kelsang.
 
22-Aug-2011 Jean-Marie Simonet
 # [#26454] mod_languages: cache does not work properly with menu associations
 # [#26654] Incorrect references to com_user. Thanks Michael.
 # Deleted obsolete admin modules mod_online and mod_unread from joomla.sql
 $ String missing in en-GB.plg_content_joomla.sys.ini
 $ Sync beez2 ini files in beez language folder vs core language.
 